k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    spec:
      containers:
        - name: backend
          image: ghcr.io/whyredfire/ss-backend:d4f56ece372c2e113f6a8ded8d21d9badfd35969
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
